<resources>
    <string name="app_name">Charity</string>
    <string name="desc">picture</string>
    <string-array name="countries_array">
        <item>Россия</item>
        <item>Армения</item>
        <item>Украина</item>
        <item>Беларуссия</item>
        <item>Казахстан</item>
        <item>Грузия</item>
        <item>Узбекистан</item>
    </string-array>
    <string-array name="domains">
        <item>Здравохранение</item>
        <item>Компания</item>
        <item>Социальная акция</item>
    </string-array>


    <string name="title_activity_setting">SettingActivity</string>
    <string name="Name">Введите имя</string>
    <string name="Lastname">Введите фамилию</string>
    <string name="Age">Введите возраст</string>
    <string name="Region">Выберите страну</string>
    <string name="SaveData">Сохранить данные</string>
    <string name="CreatingProfile">Создание профиля:</string>
    <string name="title_activity_annoucment">AnnoucmentActivity</string>
    <string name="title_activity_annoucments">AnnoucmentsActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="EnterLogin">Введите логин</string>
    <string name="ImaginePassword">Придумайте пароль</string>
    <string name="EnterPassword">Введите пароль</string>
    <string name="Enter">ВОЙТИ</string>
    <string name="OR">ИЛИ</string>
    <string name="CreateProf">СОЗДАТЬ ПРОФИЛЬ</string>
    <string name="MyProfile">Мой профиль:</string>
    <string name="Change">Редактировать</string>
    <string name="EnterEMail">Введите название почты</string>
    <string name="EnterEMAIL">Введите e-mail</string>
    <string name="EnterName">Введите ваше имя</string>
    <string name="EnterLastName">Введите вашу фамилию</string>
    <string name="EnterRegion">Введите регион</string>
    <string name="EnterAge">Введите возраст</string>
    <string name="title_activity_application">Application</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="InvalidNameAnnouc">Напишите название объявления</string>
    <string name="ChooseDomain">Выберете вид объявления</string>
    <string name="WriteAnnotation">Напишите в подробностях о вашей проблеме,целях</string>
    <string name="Next">Дальше</string>
    <string name="Continue">дальше</string>
    <string name="MoneyNeeded">Введите необходимую сумму денег</string>
    <string name="CreateAnnoc">Создать</string>
    <string name="Donate">Пожертвовать</string>
    <string name="input_YandexCardNumber">Введите номер счета в Яндекс.Деньги</string>
    <string name="ChangeProfile">Изменить</string>
    <string name="Quit">Выйти</string>
    <string name="Save">Сохранить</string>
    <string name="NotAddAnnouc">Вы еще не добавили объявлений</string>
    <string name="NoAnnouc">Пока нет объявлений</string>
    <string name="AnnoChange">Изменить</string>
</resources>
